# clap-complete-command

./: Cargo.toml  LICENSE  README.md
examples/: builder.rs  derive.rs
src/: lib.rs
